# tryton-dev-v2

./: .env.example  .gitignore  Dockerfile  Dockerfile.sao  INCIDENCIAS.md  README.md  compose.yml  docker-entrypoint.sh  nginx-sao.conf  nginx-server.conf  requirements.txt
config/: trytond.conf
modules/mi_modulo/: MANIFEST.in  pyproject.toml
modules/mi_modulo/mi_modulo/: __init__.py  mi_modulo.xml  registro.py  tryton.cfg
modules/mi_modulo/mi_modulo/tests/: __init__.py
modules/mi_modulo/mi_modulo/view/: registro_form.xml  registro_list.xml
modules/purchase_request/: MANIFEST.in  pyproject.toml
modules/purchase_request/purchase_request/: __init__.py  line.py  message.xml  purchase_request.xml  request.py  tryton.cfg
modules/purchase_request/purchase_request/tests/: __init__.py
modules/purchase_request/purchase_request/view/: request_form.xml  request_line_list.xml  request_list.xml
scripts/: init-db.sh  init-environment.sh  install-module.sh  logs.sh  reset-environment.sh  seed.py  seed.sh  update-module.sh
